AbstractBase is probably not the best place for extendsId Case: SVY-1337